--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="container-fluid dashboard">
             <div class="row-fluid">
                 <h1><a href="#">MyGroup - Members Details</a></h1>
+                <a class="github btn btn-small" href="https://github.com/ultimo/assessment" target="_blank"><i class="icon-github"></i> GitHub</a>
                 <div class="members" ng-include="'/view/members-list.html'"></div>
                 <div class="profile">
                     <div class="well clearfix" ng-view></div>
